@@ -244,6 +244,39 @@
 	
 	<profiles>
 		<profile>
+			<id>oa</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+				<jdk>[1.7, 1.8]</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>${surefire.plugin.revision}</version>
+						<configuration>
+						    <skipTests>${skipTests}</skipTests>
+						    <systemPropertyVariables>
+						    </systemPropertyVariables>
+							<argLine>-Dfile.encoding=${file.encoding}</argLine>
+							<argLine>-Xms1024m -Xmx2048m -XX:PermSize=256m -XX:MaxPermSize=512m</argLine>
+							<forkCount>0</forkCount>
+							<reuseForks>false</reuseForks>
+							<testFailureIgnore>true</testFailureIgnore>
+							<includes>
+            					<include>**/*Test.java</include>
+          					</includes>
+							<suiteXmlFiles>
+								<suiteXmlFile>testng_xmls/oa.xml</suiteXmlFile>
+							</suiteXmlFiles>
+							<reportsDirectory>${project.build.directory}/test-report</reportsDirectory>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
 			<id>mi</id>
 			<activation>
 				<activeByDefault>false</activeByDefault>
